# Heuristic-Maze-Solver

./: CMakeLists.txt  Makefile  README.md  a.out  large_example.maze  make.cpp  make.py  pyproject.toml
output/: solution.html
src/: bindings.cpp  libmaze_solver.dylib  maze.h  maze_solver.cpp  maze_solver.h  maze_solver_wrapper.py  square.h
src/maze_solver/: __main__.py  libmaze_solver.dylib
src/maze_solver/graphs/: converter.py  solver.py
src/maze_solver/models/: border.py  maze.py  role.py  solution.py  square.py
src/maze_solver/persistence/: file_format.py  serializer.py
src/maze_solver/view/: decomposer.py  primitives.py  renderer.py
